syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message Numbers {
  int32 first_number = 1;
  int32 second_number = 2;
}

message CalculateRequest {
  Numbers numbers = 1;
}

message CalculateResponse {
  int32 result = 1;
}

message PrimeNumberDecompositionRequest {
  int64 number = 1;
}

message PrimeNumberDecompositionResponse {
  int64 result = 1;
}

service CalculatorService {
  //unary API
  rpc Sum(CalculateRequest) returns(CalculateResponse) {};
  rpc Div(CalculateRequest) returns(CalculateResponse) {};

  // server streaming API
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}